--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,11 @@ go.work
 go.work.sum
 
 # env file
-.env
+.env.dev
+.env.local
+.env.test
+.env.prod
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
