ci: update linter

--- a/.github/configs/.golangci.yml
+++ b/.github/configs/.golangci.yml
@@ -203,6 +203,8 @@ linters:
     # nilnesserr:
     # nilnil:
     # nlreturn:
+    nlreturn:
+      block-size: 1
     # noctx:
     # noinlineerr:
     # nolintlint:
