--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    name: Run tests with coverage
+    name: coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
