--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,10 @@ go.work
 go.work.sum
 
 # env file
-.env.dev
-.env.local
-.env.test
-.env.prod
+local.env
+dev.env
+test.env
+prod.env
 
 # Editor/IDE
 .idea/
