--- a/.github/configs/.golangci.yml
+++ b/.github/configs/.golangci.yml
@@ -57,7 +57,7 @@ linters:
     - ineffassign
     - interfacebloat
     - intrange
-    # - ireturn # убрал, т.к. линтер забаговал
+    - ireturn
     - lll
     - loggercheck
     - maintidx
