--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -25,10 +25,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: false
-          
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
           args: >
             --config=.github/configs/.golangci.yml
+          skip-cache: true
